--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ContentControlStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/ContentControlStyle.axaml
@@ -1,10 +1,13 @@
-﻿<Styles xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<Styles
+    xmlns="https://github.com/avaloniaui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:lay="clr-namespace:LayUI.Avalonia.Controls">
     <Design.PreviewWith>
         <Border Padding="20">
             <!--  Add Controls for Previewer Here  -->
         </Border>
     </Design.PreviewWith>
-    <Style Selector="ContentControl">
+    <Style Selector="lay|LayContentControl">
         <Setter Property="Template">
             <ControlTemplate>
                 <ContentPresenter
