--- a/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/MenuStyle.axaml
+++ b/src/LayuiAvaloniaPack/UI/LayUI.Avalonia/Style/Default/MenuStyle.axaml
@@ -7,21 +7,25 @@
             <!--  Add Controls for Previewer Here  -->
         </Border>
     </Design.PreviewWith>
-    <Style Selector="ContentControl">
+    <Style Selector="lay|LayMenu">
         <Setter Property="Template">
             <ControlTemplate>
-                <ContentPresenter
-                    Name="PART_ContentPresenter"
+                <Border
                     Padding="{TemplateBinding Padding}"
-                    HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                    VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                     Background="{TemplateBinding Background}"
                     BorderBrush="{TemplateBinding BorderBrush}"
-                    BorderThickness="{TemplateBinding BorderThickness}"
-                    Content="{TemplateBinding Content}"
-                    ContentTemplate="{TemplateBinding ContentTemplate}"
-                    CornerRadius="{TemplateBinding CornerRadius}" />
+                    BorderThickness="{TemplateBinding BorderThickness}">
+                    <ScrollViewer>
+                        <ItemsPresenter
+                            Name="PART_ItemsPresenter"
+                            ItemTemplate="{TemplateBinding ItemTemplate}"
+                            Items="{TemplateBinding Items}"
+                            ItemsPanel="{TemplateBinding ItemsPanel}"
+                            KeyboardNavigation.TabNavigation="Continue" />
+                    </ScrollViewer>
+                </Border>
             </ControlTemplate>
         </Setter>
     </Style>
+    <!--  Add Styles Here  -->
 </Styles>
