新增动态绑定翻译代码

--- a/src/LayuiAvaloniaPack/Code/Layui.Main/Views/HomePage.axaml
+++ b/src/LayuiAvaloniaPack/Code/Layui.Main/Views/HomePage.axaml
@@ -183,7 +183,7 @@
                                     VerticalAlignment="Center"
                                     FontSize="20"
                                     Foreground="White"
-                                    Text="{Binding Title}" />
+                                    Text="{lang:LocalizeBinding {Binding Title}}" />
                             </Grid>
                         </RadioButton>
                     </DataTemplate>
